[package]
name = "ssd1306_driver"
version = "0.1.0"
authors = ["mtthwchoe <matthewjinkyuchoe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.8.0"

embedded-hal = "0.2.7"

esp-println = "0.3.1"

xtensa-lx = "0.7.0"

esp-backtrace = { version = "0.4.0", features = ["esp32", "panic-handler", "print-uart"] }

xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
